tests-integration/tests/custom/semantic-errors/invalid-index/stderr.expected
Exception: Error:
    model.eprime:3:32:
  |
3 | find a : bool such that a = (s[5] = t[1]) $ true
  |                                ^
Error: Tuple index 5 out of bounds


